Writing tests using Dependency injection

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
 
     // Architecture Components core testing library
     testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
+
+    // Coroutines in tests
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
 }
