--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+
         // Dependency Injection with Hilt
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
 
@@ -21,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
 }
@@ -51,6 +53,7 @@ ext {
     hamcrestVersion = '1.3'
     junitVersion = '4.13.1'
     materialVersion = '1.3.0'
+    mockitoVersion = '2.8.9'
     multiDexVersion = '2.0.1'
     recyclerViewVersion = '1.2.0'
     robolectricVersion = '4.5.1'
